move secrets to .env, lock down api authorization, upgrade jjwt
- db password, jwt secret and jdoodle keys now come from a git-ignored .env
- problems/testcases/users routes require ADMIN; execute and submissions require login
- 401 for missing credentials, 403 for wrong role, /error permitted so those aren't masked
- password hashes never serialized; username unique; login no longer enumerates accounts
- jjwt 0.9.1 -> 0.12.6, single injected signing key instead of two hardcoded copies